GNOME Bugzilla – Bug 666392
widget: Flip the sensitive flag even if the state doesn't change
Last modified: 2011-12-17 12:02:21 UTC
Even if we can't change our sensitivity because the parent is insensitive we should still flip the sensitive flag. Otherwise, with and insensitive parent, child.set_sensitive(True) ... parent.set_sensitive(True) would result in child still being insensitive.
Created attachment 203711 [details] [review] widget: Flip the sensitive flag even if the state doesn't change
This will break make check. Because I added a test for what I wanted to fix with 94f00eb04dd1433cf1cc9a3341f485124e38abd1 :) But yeah, we need to toggle widget.sensitive but not toggle widget.state_flag_sensitive. I'll do that - and add a test.
Created attachment 203721 [details] [review] widget: Flip the sensitive flag even if the state doesn't change -- Simplified the patch.
Created attachment 203722 [details] [review] tests: Add a test for latest commit
Attachment 203721 [details] pushed as 9d6da33 - widget: Flip the sensitive flag even if the state doesn't change Attachment 203722 [details] pushed as 4a11339 - tests: Add a test for latest commit